removendo comentarios e melhorias